fix hardcoded fields

--- a/public/pages/graphic.html
+++ b/public/pages/graphic.html
@@ -22,7 +22,7 @@
                            multiple>
                     <md-optgroup label="Колонки">
                         <md-option ng-value="field.id"
-                                   ng-repeat="field in ds.fields">{{field.id}}
+                                   ng-repeat="field in ds.result.fields">{{field.id}}
                         </md-option>
                     </md-optgroup>
                 </md-select>
@@ -36,7 +36,7 @@
                            multiple>
                     <md-optgroup label="Колонки">
                         <md-option ng-value="field.id"
-                                   ng-repeat="field in ds.fields">{{field.id}}
+                                   ng-repeat="field in ds.result.fields">{{field.id}}
                         </md-option>
                     </md-optgroup>
                 </md-select>
