--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
 	<link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 	<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
