--- a/public/pages/data.html
+++ b/public/pages/data.html
@@ -19,36 +19,13 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="record in data.dataset.records">
+                        <tr ng-repeat="record in data.dataset.records track by $index">
                             <td ng-repeat="field in data.dataset.fields">
                                 <span ng-bind="record[field.id]"></span>
                             </td>
                         </tr>
                         </tbody>
                     </table>
-                </div>
-            </div>
-            <div ng-controller="FilterController as filter" ng-show="main.isDataStateActive">
-                <div ng-repeat="field in filter.fields">
-                    <label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-                    <br>
-                    <select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
-                        <option value="-1" selected="selected"></option>
-                        <option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
-                    </select>
-
-                    <label ng-if="field.type == 'range'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
-                    <br>
-                    <input ng-if="field.type == 'range'"
-                           id="{{field.id}}"
-                           type="range"
-                           min="{{field.minVal}}"
-                           max="{{field.maxVal}}"
-                           value="field.selectedVal"
-                           ng-model="field.selectedVal"
-                           ng-change="filter.applyFilter(field.id, field.selectedVal)"
-                           step="1">
-                    <span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
                 </div>
             </div>
         </div>
