--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,19 +1,21 @@
 <div  id="map_wrapper" ng-controller="MapController">
     <div id="map_canvas" >
         <ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
-            <ui-gmap-polygon static="true" ng-repeat="p in polygons" path="p.path" stroke="p.stroke"
-             visible="p.visible" geodesic="p.geodesic" fill="p.fill" fit="false" events="p.events"></ui-gmap-polygon>
-            <ui-gmap-marker ng-repeat="m in map.markers" coords="m.coords" icon="m.icon" idkey="m.id">
-                <ui-gmap-window options="windowOptions" closeClick="closeClick()">
-                    <div>
-                        <div>{{m.data.Naimenovanie}}</div>
-                        <div>{{m.data.Location}}</div>
-                        <div>{{m.data.Mesce}}</div>
-                        <div>Район: {{m.data.Rajon}}</div>
-                        <div>{{m.data.lat}} {{m.data.lon}}</div>
+            <ui-gmap-polygons id="id" models="polygons" path="'path'" stroke="'stroke'"
+             visible="true" fill="'fill'" static="true" events="events" control="polygonControl"></ui-gmap-polygons>
+            <ui-gmap-markers models="map.markers"
+                             coords="'self'"
+                             idkey="id"
+                             events="markerEvents"
+                             doCluster="true"
+                             clusterOptions="clusterOpt" click="'onClick'" >
+                <ui-gmap-windows show="show">
+                    <div ng-non-bindable>{{latitude + ' ' + longitude}}
+                        <p>{{data.area}}</p>
                     </div>
-                </ui-gmap-window>
-            </ui-gmap-marker>
+                </ui-gmap-windows>
+            </ui-gmap-markers>
+
         </ui-gmap-google-map>
         <div class="rainbow">
             <div class="box-wrap">
