first working chart

--- a/public/index.html
+++ b/public/index.html
@@ -62,14 +62,16 @@
 <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 <script src="js/main.js"></script>
 <!-- Angular modules -->
-
 <script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
 <script type="text/javascript" src="/js/factories/FilterFactory.js"></script>
+<script type="text/javascript" src="/js/services/ChartService.js"></script>
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
 <script type="text/javascript" src="/js/controllers/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
 <script type="text/javascript" src="/js/controllers/editorController.js"></script>
+<script type="text/javascript" src="/js/controllers/addDatasetController.js"></script>
+<script type="text/javascript" src="/js/controllers/ChartController.js"></script>
 </body>
 </html>
