--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,9 @@
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
 <script type="text/javascript" src="/js/libraries/highcharts.js"></script>
+<script src="/js/libraries/exporting.js"></script>
+<script src="/js/libraries/offline-exporting.js"></script>
+
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 
 <script type="text/javascript" src="/js/libraries/highcharts-ng.js"></script>
