--- a/public/pages/add-dataset.html
+++ b/public/pages/add-dataset.html
@@ -10,10 +10,11 @@
                 <label>Колонки для порівняння по осі X</label>
                 <md-select ng-model="addData.selected.selectedX"
                            data-md-container-class="selectdemoSelectHeader"
+                           class="my-select"
                            ng-change="addData.selectedthings()">
                     <md-optgroup label="Колонки">
                         <md-option ng-value="field.id"
-                                   ng-if="field.type == 'text' "
+                                   ng-if="field.type == 'text' && field.graphics"
                                    ng-repeat="field in addData.selected.fields">{{field.id}}
                         </md-option>
                     </md-optgroup>
@@ -25,10 +26,11 @@
                 <md-select ng-model="addData.selected.selectedY"
                            data-md-container-class="selectdemoSelectHeader"
                            ng-change="addData.selectedthings()"
+                           class="my-select"
                            multiple>
                     <md-optgroup label="Колонки">
                         <md-option ng-value="field.id"
-                                   ng-if="field.type != 'text'"
+                                   ng-if="field.type != 'text' && field.graphics"
                                    ng-repeat="field in addData.selected.fields">{{field.id}}
                         </md-option>
                     </md-optgroup>
