--- a/public/pages/editor.html
+++ b/public/pages/editor.html
@@ -18,7 +18,7 @@
                 <form ng-submit="loadDataset(datasetOrIdentifier)">
                     <div layout-gt-xs="row">
                         <md-input-container class="md-block" flex-gt-xs>
-                            <label>Адреса або ідентифікатор</label>
+                            <label>Адреса</label>
                             <input ng-model="datasetOrIdentifier">
                         </md-input-container>
                         <md-input-container>
