--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -8,11 +8,14 @@
                              coords="'self'"
                              idkey="id"
                              events="markerEvents"
-                             doCluster="doCluster" options="markerOptions"
-                             clusterOptions="clusterOpt" click="'onClick'" >
+                             doCluster="doCluster" options="markerOptions"  clusterOptions="clusterOpt"
+                             click="'onClick'" >
                 <ui-gmap-windows show="show">
-                    <div ng-non-bindable>{{latitude + ' ' + longitude}}
-                        <p>{{data.area}}</p>
+                    <div ng-non-bindable>
+                        <div>{{data.name}}</div>
+                        <div>{{data.address}}</div>
+                        <div>{{latitude + ' ' + longitude}}</div>
+                        <div>Район: {{data.area}}</div>
                     </div>
                 </ui-gmap-windows>
             </ui-gmap-markers>
@@ -24,44 +27,28 @@
         <!--<h5>Оберiть колip маркеру</h5>-->
         <div class="actions" ng-show="dataset">
             <md-button class="md-primary" ng-click="highlight(map)"> Показати об'екти </md-button>
-            <md-checkbox class="blue" ng-class="{'md-checked': doCluster}" ng-click="toggleCluster()" ng-show="map.markers.length">Cluster</md-checkbox>
+            <md-checkbox class="blue" ng-class="{'md-checked': doCluster}" ng-click="toggleCluster()" ng-show="map.markers.length">Кластерiзацiя</md-checkbox>
             <md-button class="md-primary" ng-click="highlightRegions(map)"> Статiстика за районами </md-button>
 
-            <md-select class="fieldSelect" ng-model="field" >
-                <md-option ng-repeat="field in dataset.fields | filter: removeWrongFields"
-                           value="{{field.id}}" ng-disabled="$index === 1">
+            <md-select class="fieldSelect" ng-model="field">
+                <md-option ng-hide="filteredSet.length == 0" ng-repeat="field in filteredSet = (dataset.fields | filter: removeWrongFields)"
+                           value="{{field.id}}">
                     {{field.id}}
                 </md-option>
             </md-select>
-
-            <!--<select class="fieldSelect" ng-if="dataset" ng-options="field.id for field in dataset.fields | filter: removeWrongFields" ng-model="field"-->
-                    <!--ng-change="setCriteria(field)"></select>-->
+            <md-checkbox class="blue" ng-click="toggleColorTable()"
+                         ng-show="showCheckbox">Таблиця кольорiв</md-checkbox>
+            <div class="rainbow" ng-show="showColorTable">
+                <div class="box-wrap" ng-repeat="color in colors">
+                    <div class="box" style="background:{{color.color}};"></div>
+                    <label>{{color.minValue}}<span ng-if="color.minValue == 51200">+</span>
+                        <span ng-if="color.maxValue !== 0 && color.minValue != 51200"> - {{color.maxValue}}</span></label>
+                </div>
+            </div>
 
             <md-button class="md-primary" ng-click="reset(map)">Очистити</md-button>
         </div>
 
-        <!--<div class="rainbow" ng-show="dataset">-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box"></div><div>0</div>-->
-            <!--</div>-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box" style="background:blue;"></div><div>1-10</div>-->
-            <!--</div>-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box" style="background:green;"></div><div>11-25</div>-->
-            <!--</div>-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box" style="background:yellow;"></div><div>26-50</div>-->
-            <!--</div>-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box" style="background:orange;"></div><div>51-79</div>-->
-            <!--</div>-->
-            <!--<div class="box-wrap">-->
-                <!--<div class="box" style="background:red;"></div><div>80-100</div>-->
-            <!--</div>-->
-        <!--</div>-->
+
     </div>
-
-
-
 </div>
