--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,14 @@
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
-
+<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="js/main.js"></script>
 <!-- Angular modules -->
+
+<script type="text/javascript" src="/js/factories/resource/polygon.js"></script>
+<script type="text/javascript" src="/js/factories/polygon.js"></script>
+
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
 </body>
