--- a/public/pages/map.html
+++ b/public/pages/map.html
@@ -1,14 +1,13 @@
-<div id="map_wrapper" ng-controller="MapController">
+<div id="map_wrapper" ng-controller="MapController as map">
     <div id="map_canvas" >
 
     </div>
     <div id="mapControls">
-        <!--<h4>Налаштування</h4>-->
-        <!--<h5>Оберiть колip маркеру</h5>-->
         <md-input-container>
             <label>Назва району</label>
-            <input type="text" ng-model="district.name">
-            <md-button class="md-primary" ng-click="getPolygon()">Виділити</md-button>
+            <input type="text" ng-model="map.county">
+            <button ng-click="map.loadPolygon()">Load polygon</button>
+
         </md-input-container>
         <div class="actions" ng-show="dataset">
             <md-button class="md-primary" ng-click="highlight(map)"> Показати об'екти </md-button>
@@ -32,7 +31,6 @@
             </div>
 
             <md-button class="md-primary" ng-click="reset(map)">Очистити</md-button>
-
 
 
             <div ng-if="polygonCoords" style="height: 250px; overflow:auto;">
