--- a/client/pages/map.html
+++ b/client/pages/map.html
@@ -1,13 +1,10 @@
 <div id="map_wrapper" ng-controller="MapController as map">
-    <div id="map_canvas" >
-
-    </div>
+    <div id="map_canvas" ></div>
     <div id="mapControls">
         <md-input-container>
             <label>Назва району</label>
             <input type="text" ng-model="map.county">
             <button ng-click="map.loadPolygon()">Load polygon</button>
-
         </md-input-container>
         <div class="actions" ng-show="dataset">
             <md-button class="md-primary" ng-click="highlight(map)"> Показати об'екти </md-button>
@@ -32,14 +29,11 @@
 
             <md-button class="md-primary" ng-click="reset(map)">Очистити</md-button>
 
-
             <div ng-if="polygonCoords" style="height: 250px; overflow:auto;">
                 <div ng-repeat="set in polygonCoords">
                     <span ng-bind="set.latitude + ' ' + set.longitude"></span>
                 </div>
             </div>
         </div>
-
-
     </div>
 </div>
