Displaying datasets on map

--- a/client/pages/map.html
+++ b/client/pages/map.html
@@ -1,4 +1,4 @@
-<div id="map_wrapper" ng-controller="MapController as map">
+<div id="map_wrapper">
     <div id="map_canvas" ></div>
     <div id="mapControls">
         <md-input-container>
