--- a/client/index.html
+++ b/client/index.html
@@ -29,17 +29,17 @@
 			<md-tab label="Набори">
 				<md-content class="md-padding">
 					<md-content layout-padding>
-						<md-list ng-show="">
+						<md-list ng-if="!main.datasets">
 							<md-list-item ng-repeat="category in main.categories"
 										  ng-click="main.getDatasetsByCategory(category.name)">
 								<a ui-sref="{{category.name}}" ng-bind="category.name"></a>
 								<md-divider></md-divider>
 							</md-list-item>
 						</md-list>
-						<md-list ng-show="">
-							<md-list-item ng-repeat="category in main.categories"
-										  ng-click="main.getDatasetsByCategory(category.name)">
-								<a ui-sref="{{category.name}}" ng-bind="category.name"></a>
+						<md-list ng-if="main.datasets">
+							<md-list-item ng-repeat="dataset in main.datasets"
+										  ng-click="main.displayDataset(dataset)">
+								<a ui-sref="{{dataset.title}}" ng-bind="dataset.title"></a>
 								<md-divider></md-divider>
 							</md-list-item>
 						</md-list>
