--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ"></script>
@@ -23,22 +24,30 @@
 	</div>
 </md-toolbar>
 <div layout="row" class="all-view">
-	<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 
+	<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+		<md-button class="icon-arrow" ng-show="main.datasets.length" ng-click="main.backToCategories()">
+			<i class="fa fa-chevron-left"></i>
+		</md-button>
 		<md-tabs md-dynamic-height md-border-bottom md-selected="main.selectedTab">
-			<md-tab label="Набори">
+
+			<md-tab label="Категорii" ng-if="!main.datasets.length">
 				<md-content class="md-padding">
 					<md-content layout-padding>
-						<md-list ng-if="!main.datasets.length">
+						<md-list >
 							<md-list-item ng-repeat="category in main.categories"
 										  ng-click="main.getDatasetsByCategory(category.portalValue)">
 								<a ui-sref="{{category.name}}" ng-bind="category.name"></a>
 								<md-divider></md-divider>
 							</md-list-item>
 						</md-list>
-						<md-list ng-if="main.datasets.length">
-
-							<button ng-click="main.backToCategories()"></button>
+					</md-content>
+				</md-content>
+			</md-tab>
+			<md-tab label="Набори" ng-if="main.datasets.length">
+				<md-content class="md-padding">
+					<md-content layout-padding>
+						<md-list>
 							<md-list-item ng-repeat="dataset in main.datasets"
 										  ng-click="main.displayDataset(dataset)">
 								<a ui-sref="{{dataset.title}}" ng-bind="dataset.title"></a>
